@@ -1,5 +1,15 @@
 2013-11-16  Alan Modra  <amodra@gmail.com>
 
+	* src/powerpc/ffi.c (ffi_prep_cif_machdep): Revert 2013-02-08
+	change.  Do not consume an int arg when returning a small struct
+	for FFI_SYSV ABI.
+	(ffi_call): Only use bounce buffer when FLAG_RETURNS_SMST.
+	Properly copy bounce buffer to destination.
+	* src/powerpc/sysv.S: Revert 2013-02-08 change.
+	* src/powerpc/ppc_closure.S: Remove stray '+'.
+
+2013-11-16  Alan Modra  <amodra@gmail.com>
+
 	* src/powerpc/ffi.c (ffi_prep_args64): Align struct parameters
 	according to __STRUCT_PARM_ALIGN__.
 	(ffi_prep_cif_machdep_core): Likewise.
